# realai

./: .gitignore  API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FRONTEND_FIX.md  Dockerfile  Dockerfile.gpu  LAMBDA_DEPLOYMENT.md  LAMBDA_SIZE_OPTIMIZATION.md  LICENSE  LOCAL_AI_GUIDE.md  LOCAL_AI_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_LOCAL.md  README.md  REALAI_3.0.md  SECURITY_SUMMARY.txt  SETUP_COMPLETE.md  VALIDATION_REPORT.md  __init__.py  api_server.py  build_lambda.sh  docker-compose.yml  examples.py  examples_limitless.py  examples_local_ai.py  examples_ultimate.py  index.html  lambda_advanced.py  lambda_chat.py  lambda_core.py  lambda_core_shared.py  lambda_embeddings_audio.py  lambda_image.py  lambda_video.py  local_model_cli.py  local_models.py  main.py  models.yaml  (+30 more)
realai-core/: .gitignore  README.md  policy.json  pyproject.toml  sanity_check.py  test
realai-core/.github/: copilot-instructions.md
realai-core/.github/agents/: browser-test-engineer.agent.md  cybersecurity-expert.agent.md  game-creative-director.agent.md  game-designer.agent.md  game-technical-director.agent.md  gameplay-programmer.agent.md  my-agent.agent.md  tokenized-agents.agent.md
realai-core/agent_tools/: __init__.py  cli.py  dashboard.py  executor.py  importer.py  models.py  registry.py  runtime.py
realai-core/agent_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
realai-core/agent_tools/agents_impl/: __init__.py  code_engineer_agent.py  memory_summarizer_agent.py
realai-core/agent_tools/data/: __init__.py  access_profiles.json  agents.json
realai-core/agent_tools/engine/: __init__.py  executor.py  (+5 more)
realai-core/agents/: master.agent.json  router.agent.json
realai-core/console/: agent-runner.js  console.js  index.html
realai-core/docs/: REAL_TIME_EXECUTION.md  VERCEL_DEPLOY.md
realai-core/examples/: workflow-feature-dev.json  workflow-security-review.json
realai-core/registry/: Dockerfile  package-lock.json  package.json  render.yaml  tsconfig.json
realai-core/schema/: agent.schema.json  tool.schema.json
realai-core/scripts/: overmind_runner.py
realai-core/tests/: test_dashboard.py  test_hardening.py  test_orchestration.py  test_registry.py
realai-core/tools/: _shared.py  harden_repos.py  retry_rollout_pushes.py  rollout_all_repos.py
realai-core/ui/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+361 files in other folders)
