[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realai"
requires-python = "==3.12.*"
dynamic = ["version", "description", "readme", "classifiers"]

[project.scripts]
realai        = "realai:main"
realai-cli    = "realai.cli.realai_cli:main"
realai-server = "realai.server.app:main"
